<resources>
    <string name="app_name">A Night at the Movies</string>
    <string name="movieTitle">Movie Title</string>
    <string name="movieText">Enter Movie Title Here</string>
    <string name="genre">Genre</string>
    <string name="genreText">Enter Genre Here</string>
    <string name="year">Year</string>
    <string name="yearText">Enter Year of Release Here</string>

    <string name="btnInsert">INSERT</string>
    <string name="btnShowMovies">SHOW MOVIE LIST</string>
    <string name="btnShowPG13">SHOW ALL PG-13 MOVIES</string>
    <string name="btnBack">GO BACK</string>

    <string name="spnHeader">Rating: </string>
    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>

    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnCancel">CANCEL</string>

</resources>