<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_2_extrabold"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="A Night At The Movies"
        android:textColor="#714343"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:placeholderText="@string/movieText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_semibold"
            android:hint="@string/movieTitle"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:placeholderText="@string/genreText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_semibold"
            android:hint="@string/genre"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:placeholderText="@string/yearText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_2_semibold"
            android:hint="@string/year"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/spnHeader"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spnRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerItems"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C36969"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/btnInsert" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C36969"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/btnShowMovies" />
    </LinearLayout>

</LinearLayout>